# U-CDMR-Flow-Residual

./: .gitignore  AGENTS.md  README.md  U_CDMR_Flow_Residual_Mathematical_Dataflow.md  pyproject.toml  ucdmr_flow_residual_plus_design.md  总结.md
configs/methods/u_cdmr_flow_residual_plus/: data.alvis.yaml  data.yaml  downstream.yaml  generate.yaml  residual_flow.yaml  residual_renderer.yaml  teacher.yaml
logs/alvis/2026-05-20_ucdmr_flow_training/: README.md  ucdmr-infer-e18-6656451.err  ucdmr-infer-e18-6656451.out  ucdmr-infer-e18-a100-6656454.out  ucdmr-infer-e18-a40-6656453.err  ucdmr-infer-e18-a40-6656453.out  ucdmr-infer-e18-bal-6656461.err  ucdmr-infer-e18-bal-6656461.out  ucdmr-infer-e18-bal-6656462.out  ucdmr-infer-e18-balanced-a100-v2.slurm  ucdmr-infer-e18-balanced-a100.slurm  ucdmr-infer-epoch0018-bank-a100.slurm  ucdmr-infer-epoch0018-bank-a40.slurm  ucdmr-infer-epoch0018-bank.slurm  ucdmr-plus-full-6656197.err  ucdmr-plus-full-6656197.out  ucdmr-plus-full-6656213.err  (+1 more)
scripts/alvis/: eval_ucdmr_plus_downstream.sh  filter_ucdmr_plus_synthetic.sh  generate_ucdmr_plus_synthetic.sh  prepare_ucdmr_plus_data.sh  sample_ucdmr_plus_masks.sh  train_ucdmr_plus_downstream_2node_8gpu.slurm  train_ucdmr_plus_mask_descriptor_flow.sh  train_ucdmr_plus_residual_flow_2node_8gpu.slurm  train_ucdmr_plus_residual_renderer_2node_8gpu.slurm  train_ucdmr_plus_teacher_2node_8gpu.slurm
scripts/debug/: check_orientation_render.py
src/ucdmr_flow_residual_plus/: __init__.py  config.py  constants.py  domain_stats.py  evaluation.py  generation.py  image_utils.py  io_utils.py  manifest.py  mask_descriptor_flow.py  mask_representations.py  paths.py  pseudo_normal.py  splits.py  teacher.py
(+31 files in other folders)
