[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crack-synth"
version = "0.1.0"
description = "U-CDMR-Flow-Residual+ tooling for domain-conditioned device crack image-mask pair generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.scripts]
ucdmr_plus_prepare_manifest = "ucdmr_flow_residual_plus.cli.prepare_manifest:main"
ucdmr_plus_prepare_splits = "ucdmr_flow_residual_plus.cli.prepare_splits:main"
ucdmr_plus_prepare_masks = "ucdmr_flow_residual_plus.cli.prepare_masks:main"
ucdmr_plus_domain_stats = "ucdmr_flow_residual_plus.cli.domain_stats:main"
ucdmr_plus_prepare_pseudo_normal = "ucdmr_flow_residual_plus.cli.prepare_pseudo_normal:main"
ucdmr_plus_train_teacher = "ucdmr_flow_residual_plus.cli.train_teacher:main"
ucdmr_plus_train_residual_flow = "ucdmr_flow_residual_plus.cli.train_residual_flow:main"
ucdmr_plus_train_mask_descriptor_flow = "ucdmr_flow_residual_plus.cli.train_mask_descriptor_flow:main"
ucdmr_plus_sample_masks = "ucdmr_flow_residual_plus.cli.sample_masks:main"
ucdmr_plus_generate_synthetic = "ucdmr_flow_residual_plus.cli.generate_synthetic:main"
ucdmr_plus_filter_synthetic = "ucdmr_flow_residual_plus.cli.filter_synthetic:main"
ucdmr_plus_train_downstream = "ucdmr_flow_residual_plus.cli.train_downstream:main"
ucdmr_plus_eval_downstream = "ucdmr_flow_residual_plus.cli.eval_downstream:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
